# ch.grischamedia.inventree.dashboard

./: DEBUG_COMMANDS.md  LICENSE  README.md  pyproject.toml
dashboard/: __init__.py  plugin.py  urls.py  views.py
dashboard/templates/dashboard/: dashboard.html
gm_dashboard/: plugin.py  urls.py  views.py
gm_dashboard/templates/dashboard/: dashboard.html
