[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ch.grischamedia.inventree.dashboard"
version = "0.0.26"
description = "Dashboard Plugin für InvenTree mit benutzerdefinierten Links"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0"}
authors = [
    {name = "GrischaMedia", email = "info@grischamedia.ch"}
]
keywords = ["inventree", "plugin", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/GrischaMedia/ch.grischamedia.inventree.dashboard"
Repository = "https://github.com/GrischaMedia/ch.grischamedia.inventree.dashboard"

[tool.setuptools]
packages = ["gm_dashboard"]

[tool.setuptools.package-data]
gm_dashboard = ["templates/**/*", "static/**/*"]

[project.entry-points."inventree_plugins"]
gm-dashboard = "gm_dashboard:DashboardPlugin"

